--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.70.2
+version: 1.70.3
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -243,6 +243,9 @@ commands:
     description: Staff Chat Command
     usage: Incorrect format! Please use /staffchat
     aliases: [sc, ac, adminchat]
+  trash:
+    description: Trash Command
+    usage: Incorrect format! Please use /trash
 permissions:
   se.all:
     description: "Gives access to all commands."
@@ -314,6 +317,7 @@ permissions:
       se.sendwarp: true
       se.socialspy: true
       se.staffchat: true
+      se.trash: true
   se.reload:
     description: "Gives access to the /se reload command."
     default: false
@@ -511,4 +515,7 @@ permissions:
     default: false
   se.staffchat:
     description: "Invsee Others Permission"
+    default: false
+  se.trash:
+    description: "Trash Command"
     default: false
