--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.70.9
+version: 1.71.0
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -263,6 +263,7 @@ permissions:
       se.version: true
       se.setspawn: true
       se.spawn: true
+      se.spawn.others: true
       se.deletespawn: true
       se.alert: true
       se.silentjoin: true
@@ -349,6 +350,9 @@ permissions:
     default: false
   se.spawn:
     description: "Gives access to the /spawn command"
+    default: false
+  se.spawn.others:
+    description: "Gives access to the teleporting other players to Spawn"
     default: false
   se.deletespawn:
     description: "Gives access to /deletespawn"
