--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.72.6
+version: 1.72.7
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -123,7 +123,7 @@ commands:
     usage: Incorrect format! Please use /kill
   msg:
     description: Message Command
-    aliases: [message, w, whisper]
+    aliases: [message]
     usage: Incorrect Format! Please use /msg <player> <message>
   msgtoggle:
     description: Message Toggle Command
