--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.72.7
+# This config was generated for version 1.72.8
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -89,7 +89,11 @@ enable-discord-integration: false
 # Change the name of the Discord Channel where report notifications are sent.
 # This name will have to be entered into the DiscordSRV config.yml File.
 # ["report-logs": "000000000000000000"] as an example.
-channel-name: report-logs
+report-user-channel-name: report-user
+# Change the name of the Discord Channel where report notifications are sent.
+# This name will have to be entered into the DiscordSRV config.yml File.
+# ["report-logs": "000000000000000000"] as an example.
+report-bug-channel-name: report-bug
 # Adds a message that is pasted before the Report Command Embed Message is sent
 # Useful for pinging a group with all Staff Members inside when a Report is sent
 # Please make sure to paste the Group ID into the quotations for this to work correctly
