--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.75.5
+# This config was generated for version 1.75.6
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -85,10 +85,10 @@ enable-motd: true
 motd-delay: 5
 # Change the Messaging for the MOTD
 motd-message:
-  - '-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-'
-  - '&bThis Server uses Server Essentials!'
-  - '&aDownload the Plugin Today!'
-  - '-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-'
+  - "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
+  - "&bThis Server uses Server Essentials!"
+  - "&aDownload the Plugin Today!"
+  - "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
 ############################################################
 # +------------------------------------------------------+ #
 # +              Server Essentials (Discord)             + #
