--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.76.0
+# This config was generated for version 1.76.1
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -56,6 +56,10 @@ vanish-on-join: false
 # B = server-name
 # Useful for Bungeecord Servers and allowing the use of one Discord channel without confusion
 server-name: ""
+# Enable or Disable Bungeecord Integration for the StaffChat Command
+# Please make sure you are on a Bungeecord Network before enabling this
+# PS: Restart your Server after toggling this option
+enable-bungee-integration: false
 ############################################################
 # +------------------------------------------------------+ #
 # +              Server Essentials (Broadcast)           + #
