--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.77.6
+# This config was generated for version 1.77.7
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -48,6 +48,14 @@ vanish-on-join: false
 # B = server-name
 # Useful for Bungeecord Servers and allowing the use of one Discord channel without confusion
 server-name: ""
+# How long Players have to wait until they can use the Repair Command again
+# Set to 0 to Disable
+# Restart Required
+repair-cooldown: 30
+# How long Players have to wait until they can use the Heal Command again
+# Set to 0 to Disable
+# Restart Required
+heal-cooldown: 30
 ############################################################
 # +------------------------------------------------------+ #
 # +              Server Essentials (Broadcast)           + #
@@ -203,6 +211,8 @@ teleport-wait: 5
 # Default: true
 teleport-movement-cancel: true
 # How long Players have to wait until they can use the Teleport Command again
+# Set to 0 to Disable
+# Restart Required
 tp-cooldown: 30
 ############################################################
 # +------------------------------------------------------+ #
@@ -228,4 +238,6 @@ enable-back-blacklist: false
 back-blacklist:
   - world
 # How long Players have to wait until they can use the Back Command again
+# Set to 0 to Disable
+# Restart Required
 back-cooldown: 30
