--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.77.9
+# This config was generated for version 1.78.0
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -32,7 +32,8 @@ enable-first-time-join-message: true
 enable-staff-join-message: true
 # Enable or Disable the Staff Leave Message
 enable-staff-leave-message: true
-# Enable to send players to the Spawn upon Joining for the First Time
+# Enable to send players to the Newbie Spawn upon Joining for the First Time
+# If a Newbie Spawn isn't set, this will send players to the main Spawn
 spawn-on-first-join: false
 # Enable to send players to the Spawn upon Joining
 spawn-on-join: false
