--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.77.9
+version: 1.78.0
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -25,8 +25,12 @@ commands:
     description: Shows Playtime
   setspawn:
     description: Sets the spawn
+  tutorial:
+    description: Teleports you to newbie spawn
   spawn:
     description: Teleports you to spawn
+  sendspawn:
+    description: Teleports a player to Spawn
   deletespawn:
     description: Deletes the spawn
     aliases: [delspawn]
