--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.78.8
+version: 1.78.9
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -219,6 +219,7 @@ permissions:
       se.tpaccept: true
       se.tpdeny: true
       se.teleport: true
+      se.teleport.coords: true
       se.tpall: true
       se.silenttp: true
       se.info: true
@@ -322,6 +323,9 @@ permissions:
     default: false
   se.teleport:
     description: "Teleport Command"
+    default: false
+  se.teleport.coords:
+    description: "Teleport Coords Command"
     default: false
   se.tpall:
     description: "Teleport All Command"
