--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerEssentials
-version: 1.80.4
+version: 1.80.5
 main: me.rocketmankianproductions.serveressentials.ServerEssentials
 api-version: 1.16
 authors: [ RocketManKian ]
@@ -196,6 +196,9 @@ commands:
     description: Convert Command
   sudo:
     description: Sudo Command
+  whois:
+    description: WhoIs Command
+    aliases: [checkaccount, checkplayer, playerinfo]
 permissions:
   se.all:
     description: "Gives access to all commands."
@@ -281,6 +284,7 @@ permissions:
       se.teleport.bypass: true
       se.convert: true
       se.sudo: true
+      se.whois: true
   se.reload:
     description: "Gives access to the /se reload command."
     default: false
@@ -520,4 +524,7 @@ permissions:
     default: false
   se.sudo:
     description: "Sudo Command Permission"
+    default: false
+  se.whois:
+    description: "Whois Command Permission"
     default: false
